--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,16 @@
   }
 }
 
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    display: none; /* Esconde a barra no Chrome/Safari */
+  }
+  .custom-scrollbar {
+    -ms-overflow-style: none;  /* Esconde no IE/Edge */
+    scrollbar-width: none;  /* Esconde no Firefox */
+  }
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
