--- a/app/globals.css
+++ b/app/globals.css
@@ -6,12 +6,12 @@
 }
 
 @layer utilities {
-  .scrollbar-hide::-webkit-scrollbar {
-    display: none;
+  .no-scrollbar::-webkit-scrollbar { 
+    display: none; 
   }
-  .scrollbar-hide {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  .no-scrollbar { 
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
   }
 }
 
